# amanda

./: Makefile.am  configure.in
amandad-src/: amandad.c
application-src/: Makefile.am  amndmp.pl
common-src/: Makefile.am  amprotocol.c  amprotocol.h  bsd-security.c  bsdtcp-security.c  bsdudp-security.c  conffile.c  conffile.h  krb5-security.c  local-security.c  ndmp-protocol.h  rsh-security.c  security-util.c  security-util.h  security.c  security.h  ssh-security.c  ssl-security.c
config/amanda/: components.m4  ndmp-device.m4  ssl-security.m4
device-src/: ndmp-device.c
example/: amanda.conf.in
installcheck/: Amanda_Taper_Scan_alphabetic.pl  Makefile.am
man/xml-source/: amanda-interactivity.7.xml  amanda-taperscan.7.xml  amanda.conf.5.xml
ndmp-src/: Makefile.am  amanda_ndmp_tape_simulator.c  ndma_comm_proxy.c  ndma_comm_session.c  ndma_cops_backreco.c  ndma_cops_labels.c  ndma_cops_query.c  ndma_cops_robot.c  ndma_ctrl_calls.c  ndma_ctrl_conn.c  ndma_ctst_data.c  ndma_ctst_mover.c  ndma_ctst_subr.c  ndma_tape_simulator.c  ndmagents.h  ndmjob_args.c  ndmjob_job.c  ndmjob_main.c  ndml_agent.c  ndml_conn.c  ndml_fhdb.c  ndmos.c  ndmos.h  ndmos_freebsd.c  ndmos_freebsd.h  ndmos_linux.h  ndmos_solaris.h  ndmos_xxx.c  ndmos_xxx.h  ndmp3.x  ndmp3_translate.c  ndmp4.x  ndmp9.x  ndmp_backup_tape_simulator.c  smccmd.c  snoop_tar.c  snoop_tar.h  tarhdr_gnu.h  wrap_tar.c  wt1.c
perl/: Makefile.am
perl/Amanda/: Changer.pm  Config.swg  Interactive.pm  Ndmp.swg  ScanInventory.pm  Tapelist.swg  Util.swg
perl/Amanda/Interactive/: email.pm  tty.pm  tty_email.pm
perl/Amanda/Recovery/: Scan.pm
perl/Amanda/Taper/: Controller.pm  Scan.pm
perl/Amanda/Taper/Scan/: alphabetic.pm  oldest.pm
server-src/: amadmin.c  amcheck-device.pl  amlabel.c  amlabel.pl  amtape.pl  amvault.pl  diskfile.c  diskfile.h  driver.c  driverio.c  dumper.c  server_util.c  server_util.h  taper.pl
